jira_clone/force-app/main/default/objects/ValidationRule__c/ValidationRule__c.object-meta.xml
<CustomObject>
    <description>Validation rules for workflows</description>
    <label>Validation Rule</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Validation Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>