jira_clone/force-app/main/default/objects/ValidationRule__c/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <description>Expected record status</description>
    <label>Record Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>