jira_clone/force-app/main/default/objects/ValidationRule__c/fields/TicketField__c.field-meta.xml
<CustomField>
    <fullName>TicketField__c</fullName>
    <description>Ticket field to validate</description>
    <label>Ticket Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>