jira_clone/force-app/main/default/objects/ValidationRule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Validation rule type</description>
    <label>Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>