jira_clone/force-app/main/default/objects/ValidationRule__c/fields/WorkflowTransition__c.field-meta.xml
<CustomField>
    <fullName>WorkflowTransition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Workflow transition reference</description>
    <label>Workflow Transition</label>
    <referenceTo>WorkflowTransition__c</referenceTo>
    <relationshipLabel>Validation Rules</relationshipLabel>
    <relationshipName>ValidationRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>